--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<style>
 		body {
 			margin: 0;
-			background-color: black;
+			background-color: white;
 		}
 	</style>
 </head>
@@ -18,8 +18,8 @@
 			mode: Phaser.Scale.FIT,
 			parent: 'phaser-example',
 			autoCenter: Phaser.Scale.CENTER_BOTH,
-			width: 1920,
-			height: 1080
+			width: window.innerWidth,
+			height: window.innerHeight
 		},
 		physics: {
 		default: 'arcade',
@@ -44,7 +44,7 @@
 	var spawnFrequency = 1000;
 	var waxCaught = 0;
 	var maxWaxCaught = 0;
-
+	
 	function preload () {
 		this.load.image('wax', 'assets/wax_sticker.png');
 		this.load.image('ground', 'assets/ground.png');
@@ -53,9 +53,9 @@
 	function create () {
 		engine = this;
 		ground = this.physics.add.staticGroup();
-		ground.create(0, 1105, 'ground').setScale(4).refreshBody();
-		score = this.add.text(10, 1038, '', { font: '32px Arial Bold', fill: '#FFFFFF' });
-		maxScore = this.add.text(10, 1016, '', { font: '18px Arial Bold', fill: '#999999' });
+		ground.create(0, window.innerHeight + 10, 'ground').setScale(4).refreshBody();
+		score = this.add.text(15, window.innerHeight - 75, '', { font: '60px Arial Bold', fill: '#FFFFFF' });
+		maxScore = this.add.text(15, window.innerHeight - 120, '', { font: '40px Arial Bold', fill: '#999999' });
 	}
 
 	function update (time) {
@@ -108,11 +108,15 @@
 	
 	function spawnWax() {
 		var wax;
-		var x = Phaser.Math.Between(100, 1820);
+		var x = Phaser.Math.Between(100, window.innerWidth - 100);
 		var y = -100;
 		wax = engine.physics.add.image(x, y, 'wax');
-		wax.setDisplaySize(200, 200);
-		wax.setVelocity(0, 200);
+		wax.setDisplaySize(window.innerWidth * window.innerHeight * 0.00012, window.innerWidth * window.innerHeight * 0.00012);
+		var extraSpeed = 0;
+		if ((window.innerHeight - window.innerWidth) > 0) {
+			extraSpeed = (window.innerHeight - window.innerWidth) / 2.2;
+		}
+		wax.setVelocity(0, 200 + extraSpeed);
 		wax.setInteractive();
 		wax.on('pointerdown', onCaught(wax), this);
 		engine.physics.add.collider(wax, ground, gameOver(wax), null, this);
