--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<style>
 		body {
 			margin: 0;
+			padding: 0;
 			background-color: white;
 		}
 	</style>
@@ -12,14 +13,15 @@
 
 <body>
 <script>
+	const width = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
+	const height = window.innerHeight || document.documentElement.clientHeight || document.body.clientHeight;
 	var config = {
 		type: Phaser.AUTO,
 		scale: {
 			mode: Phaser.Scale.FIT,
 			parent: 'phaser-example',
-			autoCenter: Phaser.Scale.CENTER_BOTH,
-			width: window.innerWidth,
-			height: window.innerHeight
+			width: width,
+			height: height
 		},
 		physics: {
 		default: 'arcade',
@@ -53,9 +55,9 @@
 	function create () {
 		engine = this;
 		ground = this.physics.add.staticGroup();
-		ground.create(0, window.innerHeight + 10, 'ground').setScale(4).refreshBody();
-		score = this.add.text(15, window.innerHeight - 75, '', { font: '60px Arial Bold', fill: '#FFFFFF' });
-		maxScore = this.add.text(15, window.innerHeight - 120, '', { font: '40px Arial Bold', fill: '#999999' });
+		ground.create(0, height + 10, 'ground').setScale(4).refreshBody();
+		score = this.add.text(15, height - 75, '', { font: '60px Arial Bold', fill: '#FFFFFF' });
+		maxScore = this.add.text(15, height - 120, '', { font: '40px Arial Bold', fill: '#999999' });
 	}
 
 	function update (time) {
@@ -108,13 +110,13 @@
 	
 	function spawnWax() {
 		var wax;
-		var x = Phaser.Math.Between(100, window.innerWidth - 100);
+		var x = Phaser.Math.Between(100, width - 100);
 		var y = -100;
 		wax = engine.physics.add.image(x, y, 'wax');
-		wax.setDisplaySize(window.innerWidth * window.innerHeight * 0.00012, window.innerWidth * window.innerHeight * 0.00012);
+		wax.setDisplaySize(width * height * 0.00012, width * height * 0.00012);
 		var extraSpeed = 0;
-		if ((window.innerHeight - window.innerWidth) > 0) {
-			extraSpeed = (window.innerHeight - window.innerWidth) / 2.2;
+		if ((height - width) > 0) {
+			extraSpeed = (height - width) / 1.5;
 		}
 		wax.setVelocity(0, 200 + extraSpeed);
 		wax.setInteractive();
