--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.21.0/dist/phaser-arcade-physics.min.js"></script>
 	<style>
 		body {
+			width: 100%;	
+			height: 100%;
 			margin: 0;
 			padding: 0;
-			background-color: white;
+			background-color: black;
 		}
 	</style>
 </head>
@@ -17,11 +19,11 @@
 	const height = window.innerHeight || document.documentElement.clientHeight || document.body.clientHeight;
 	var config = {
 		type: Phaser.AUTO,
-		scale: {
-			mode: Phaser.Scale.FIT,
-			parent: 'phaser-example',
-			width: width,
-			height: height
+		width: width,
+		height: height,
+		 scale: {
+			mode: Phaser.Scale.WIDTH_CONTROLS_HEIGHT,
+			autoCenter: Phaser.Scale.CENTER_HORIZONTALLY 
 		},
 		physics: {
 		default: 'arcade',
